# python-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  jupytext.toml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
assets/: minimal_repo_structure.mmd  minimal_repo_tree.txt
configurations/: CHECKER watchdog_cmd_02_UPDATED_15M.xml  CHECKER watchdog_cmd_02_UPDATED_1M.xml  CHECKER watchdog_cmd_02_WIN_DEFAULT.xml  python_local.conf  python_local.toml  python_personal.conf  python_repo.conf  python_repo.toml  watchdog_cmd_01.conf  watchdog_cmd_02.conf
configurations/loggers/: logger_console.toml  logger_file.toml  logger_file_console.toml  logger_file_limit.toml  logger_file_limit_console.toml
configurations/schemas/: README.md  application_config.schema.json  watchdog_config.schema.json
configurations/watchdogs/: watchdog_cmd_01.toml  watchdog_cmd_02.toml
docs/: AUDIT.md  CHANGELOG.md  CHECKER_SCHEDULER_SET_UP.md  EVALUATION.md  EVALUATION_SUMMARY.md  PERSISTENT_RUN.md  PROJECT_VISION.md  TESTING_CHECKLIST.md  visualisation_documentation.html
docs/adr/: 0001-foundational-config-layering.md  0002-repo-root-path-anchoring.md  0003-toml-config-profiles.md  0004-logger-profiles-toml-dictconfig.md  0005-python-version-support-strategy.md  0006-config-tracked-base-and-overlays.md  0007-watchdog-supervision-semantics.md
docs/meta/: JUPYTER_ECOSYSTEM.md  SKILL_BRAINSTORM.md  TESTING_CHECKLIST.md
docs/notebooks_freezes/: attributes_documentation.html
docs/tutorials/: CHECKER_SCHEDULER_SET_UP.md  CONF_TO_TOML.md  PERSISTENT_RUN.md
logs/: cover_log.csv
marimo/documentation/: documentation_notebook.py
marimo/template/: template_notebook.py
notebooks/documentation/: attributes_documentation.py  visualisation_documentation.py
notebooks/template/: template_notebook_empty.py  template_notebook_final.py  template_notebook_repo.py  template_parameterized_execution_notebook.py
scripts/: install-hooks.ps1  install-hooks.sh  pre-commit  pre-push
specs/001_config_logger_decoupling/: IMPLEMENTATION_PLAN.md  PRD.md  TASK_VISION.md
specs/001_config_logger_decoupling/issues/: 01-project-paths-service.md  02-config-loader.md  03-config-delegates-to-loader.md  04-baseconfig-drops-logger.md  05-logger-independent-path-injection.md  06-migrate-conf-layout.md  07-cwd-independence-acceptance-test.md
specs/002_config_naming_refactoring/: EXECUTION_PLAYBOOK.md  PRD.md
specs/002_config_naming_refactoring/issues/: 01-rename-application-config-family.md  02-rename-component-config-base-and-fix-watchdog-identity.md  03-documentation-truthfulness-sweep.md
specs/003_conf_files_form_resolution/: EXECUTION_PLAYBOOK.md  PRD.md
specs/003_conf_files_form_resolution/issues/: 01-core-toml-migration.md  02-snapshot-json-round-trip.md  (+5 more)
specs/004_check_logger_config_format/: EXECUTION_PLAYBOOK.md  PRD.md
specs/005_resolve_log_and_print/: EXECUTION_PLAYBOOK.md  PRD.md
specs/006_resolve_global_and_venv_constants/: BRAINSTORM.md  EXECUTION_PLAYBOOK.md
specs/007_update_and_optimize_python_version_and_libraries/: BRAINSTORM.md  EXECUTION_PLAYBOOK.md  PRD.md
specs/008_SP_asses_repository_architecture_and_quality/: STATUS_REPORT.md
src/configurations/: watchdog_config.py  watchdog_config_data.py
src/constants/: env_constants.py  global_constants.py
src/data/: attributes.csv  attributes.py  attributes.xlsm  saver_and_loader.py
src/exceptions/: custom_exception.py  data_exception.py  development_exception.py  exception_executioner.py
src/scripts/: param_notebook_execution.py
src/scripts_production/: PERSISTENT_RUN.md  checker.py  heartbeat.py  run_cmd_status_print_01.py  run_cmd_status_print_02.py  stop_watchdog_cmd_01.bat  stop_watchdog_cmd_02.bat  stop_watchdog_general.bat  watchdog.py  watchdog_config.py
src/transformations/: base_transformer.py  datetime_one_hot_transformer.py  transformer_methods.py
src/utils/: application_config.py  application_config_data.py  base_component_config.py  base_config.py  config.py  config_data.py  config_loader.py  cover_logger.py  date_time_functions.py  envs.py  helper_functions.py  leap_year.py  logger.py  make_print_documentation.py  meta_class.py  monitored_base.py  notebook_support_functions.py  notebooks_executioner.py  notebooks_executioner_linux.py  print_success.py  project_paths.py  singleton_meta.py  timer.py
src/visualisations/: colors.py  plotly_bar_chart.py  plotly_bar_chart_multi.py  plotly_base.py  plotly_candle.py  plotly_heatmap.py  plotly_histogram.py  plotly_histogram_2d.py  plotly_histogram_distplot.py  plotly_histogram_multi.py  plotly_line_chart.py  plotly_time_series.py  plotly_time_series_base.py  plotly_time_series_events.py  visualisation_functions.py
tests/: conftest.py
tests/tests_configurations/: test_watchdog_config.py
tests/tests_data/: test_attributes.py  test_saver_and_loader.py
tests/tests_exceptions/: test_exceptions.py
tests/tests_scripts_production/: test_checker.py  test_heartbeat.py  test_watchdog.py
tests/tests_transformations/: test_datetime_one_hot_transformer.py  test_datetime_one_hot_transformer.txt
tests/tests_utils/: test_application_config.py  test_base_component_config.py  test_config.py  test_config_loader.py  test_config_schema_drift.py  test_cwd_independence.py  test_date_time_functions.py  test_envs.py  test_helper_functions.py  test_leap_year.py  test_logger.py  test_meta_class.py  test_monitored_base.py  test_notebooks_executioner.py  test_print_success.py  test_project_paths.py  test_python_version_consistency.py  test_singleton_meta.py  test_timer.py
tests/tests_visualisations/: test_colors.py  test_plotly_bar_chart.py  test_plotly_bar_chart_multi.py  test_plotly_base.py  test_plotly_candle.py  test_plotly_heatmap.py  test_plotly_histogram.py  test_plotly_histogram_2d.py  test_plotly_histogram_distplot.py  test_plotly_histogram_multi.py  test_plotly_line_chart.py  test_plotly_time_series.py  test_plotly_time_series_base.py  test_plotly_time_series_events.py  test_visualisation_functions.py
(+46 files in other folders)
