[project]
name = "python-minimal-template"
version = "1.0.0"
description = "Minimal Python repository template with logger, config, exceptions, transformers, and testing infrastructure"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["template", "python", "logger", "config", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Runtime libraries (7)
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "pyhocon>=0.3.60",
    "typedload>=2.28",
    "pandas>=2.1.4",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    # Development libraries (7)
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    "beautifulsoup4>=4.12.0",
]

# Windows-specific dependencies
windows = [
    "pywin32>=311; sys_platform == 'win32'",
    "pywinpty>=3.0.3; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
config_file = "mypy.ini"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # Original rules
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    # New additions for better code quality
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # Pylint (comprehensive checks)
    "RUF",  # Ruff-specific rules
    "PERF", # Performance anti-patterns
    "FURB", # Refurb (modernization)
    "LOG",  # flake8-logging
    "T20",  # flake8-print (catch debug prints)
    "ERA",  # eradicate (commented-out code)
    "PD",   # pandas-vet (for data science)
    "NPY",  # NumPy-specific rules (for data science)
    "D",    # pydocstyle (docstring checking)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert usage (common in tests)
    "PLR0913", # too many arguments (sometimes necessary)
    "PLR2004", # magic value comparison (can be noisy)
    "T201",    # print statements (useful in demo/debug code)
    "PT006",   # pytest.mark.parametrize string vs tuple (both work fine)
    "PT018",   # complex assertions (sometimes clearer than splitting)
    # Docstring style ignores (preserve custom Sphinx/reST style)
    "D200",    # One-line docstring should fit on one line (we use multi-line format for all docstrings)
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D401",    # First line should be in imperative mood (we use descriptive style)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Use numpy convention which enables D213 (content starts on second line)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov-report=term-missing",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Suppress third-party library deprecation warnings
filterwarnings = [
    "ignore::DeprecationWarning:pyhocon.*",
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 40  # Fail if coverage drops below 40%
show_missing = true
skip_covered = false

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "src/external"]
skips = ["B101"]  # Skip assert warnings (common in tests)
