[project]
name = "python-template"
version = "1.0.0"
description = "Minimal Python repository template with logger, config, exceptions, transformers, and testing infrastructure"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = {text = "MIT"}
authors = [
    {name = "Jiri Palek", email = "jiri.palek@gmail.com"}
]
keywords = ["template", "python", "logger", "config", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "python-dotenv>=1.2.2",
    "gitpython>=3.1.51",
    "typedload>=2.41",
    "pandas>=3.0.3",
    "numpy>=2.5.1",
    "scikit-learn>=1.9.0",
    # Jupyter packages - Notebook 7.x (JupyterLab-based) with jupytext support.
    # Trimmed for the 3.13/3.14 relock: transitive Jupyter deps (traitlets, parso, jedi,
    # pyzmq, tornado, mistune, pandocfilters, send2trash, nest-asyncio, decorator, qtconsole,
    # qtpy, jupyter-core, jupyterlab-pygments, terminado, prompt-toolkit, pygments) are no
    # longer pinned explicitly - uv.lock still resolves and pins them transitively.
    "jupyter>=1.1.1",
    "jupyter-client>=8.9.1",
    "jupyter-console>=6.6.3",
    "jupyter_server>=2.20.0",  # Notebook 7.x requires jupyter_server 2.x
    "notebook>=7.6.0",  # Notebook 7.5.2+ includes JupyterLab 4.5.2 with anchor fix (PR #18208)
    "jupyterlab>=4.6.1",  # Required by Notebook 7; ≥4.5.2 fixes anchor navigation (PR #18208)
    "nbclient>=0.11.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "jupytext>=1.19.4",  # Latest with full Notebook 7/JupyterLab 4 support
    "papermill>=2.7.0",
    "ipykernel>=7.3.0",  # Major upgrade with Python 3.10+ requirement
    "ipython>=9.15.0",
    "ipywidgets>=8.1.8",
    "debugpy>=1.8.21",
    "types-requests>=2.33.0.20260712",
    "openpyxl>=3.1.5",
    "marimo[recommended]>=0.23.14",
    "plotly>=6.9.0",
    "termcolor>=3.3.0",
    "aiohttp>=3.14.1",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
    "idna>=3.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "bandit[toml]>=1.9.4",
    "pip-audit>=2.10.1",
    "beautifulsoup4>=4.15.0",
]

# Windows-specific dependencies
windows = [
    "pywin32>=312; sys_platform == 'win32'",
    "pywinpty>=3.0.5; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
config_file = "mypy.ini"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    # Original rules
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    # New additions for better code quality
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # Pylint (comprehensive checks)
    "RUF",  # Ruff-specific rules
    "PERF", # Performance anti-patterns
    "FURB", # Refurb (modernization)
    "LOG",  # flake8-logging
    "T20",  # flake8-print (catch debug prints)
    "ERA",  # eradicate (commented-out code)
    "PD",   # pandas-vet (for data science)
    "NPY",  # NumPy-specific rules (for data science)
    "D",    # pydocstyle (docstring checking)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # assert usage (common in tests)
    "PLR0913", # too many arguments (sometimes necessary)
    "PLR2004", # magic value comparison (can be noisy)
    "T201",    # print statements (useful in demo/debug code)
    "PT006",   # pytest.mark.parametrize string vs tuple (both work fine)
    "PT018",   # complex assertions (sometimes clearer than splitting)
    # Docstring style ignores (preserve custom Sphinx/reST style)
    "D200",    # One-line docstring should fit on one line (we use multi-line format for all docstrings)
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D401",    # First line should be in imperative mood (we use descriptive style)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Use numpy convention which enables D213 (content starts on second line)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov-report=term-missing",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 25  # Fail if coverage drops below fail_under%
show_missing = true
skip_covered = false

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "src/external"]
skips = ["B101"]  # Skip assert warnings (common in tests)
